--- a/index.html
+++ b/index.html
@@ -84,9 +84,14 @@
 									<a href="images/fulls/IMG_4786.png" class="image"><img src="images/thumbs/IMG_4786.webp" alt=""></a>
 								</article>
 
-								<article class="item thumb span-2">
+								<article class="item thumb span-1">
 									<h2>Cherry girl</h2>
 									<a href="images/fulls/IMG_5462.png" class="image"><img src="images/thumbs/IMG_5462.webp" alt=""></a>
+								</article>
+
+								<article class="item thumb span-1">
+									<h2>Opera Kaworu (art attack for Junferno)</h2>
+									<a href="images/fulls/IMG_5473.png" class="image"><img src="images/thumbs/IMG_5473.webp" alt=""></a>
 								</article>
 
 							</div>
@@ -154,7 +159,7 @@
 									<a href="images/fulls/IMG_5472.png" class="image"><img src="images/thumbs/IMG_5472.webp" alt=""></a>
 								</article>
 
-								<article class="item thumb span-1">
+								<article class="item thumb span-2">
 									<h2>Girl (free art for ladronism)</h2>
 									<a href="images/fulls/IMG_5464.png" class="image"><img src="images/thumbs/IMG_5464.webp" alt=""></a>
 								</article>
